@@ -38,6 +38,9 @@
 <p>2016-10-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>acinclude.m4 (LIBS): Fix memory leaks in GM_FUNC_MMAP_FILEIO
+macro test-case so that it can be used successfully with ASAN
+compilation options.</li>
 <li>magick/blob.c: Eliminate unused variable compiler warnings when
 HAVE_MMAP_FILEIO is not defined.</li>
 </ul>
